# LinkedIn-AI-Matcher

./: .gitignore  README.md  pyproject.toml
frontend/: package.json  pnpm-lock.yaml
linkedin_ai_matcher/: main.py  models.py
linkedin_ai_matcher/api/: README.md  __main__.py  matches.py
linkedin_ai_matcher/db/: __init__.py  engine.py  initialize_db.py  schema.py
linkedin_ai_matcher/integration/: __init__.py  manager.py
linkedin_ai_matcher/linkedin/: __init__.py  job_page.py  linkedin_client.py  recommended_ids.py
linkedin_ai_matcher/llm/: __init__.py  job_match.py  llms.py  summary.py
linkedin_ai_matcher/models/: __init__.py  applicant.py  base.py  document.py  job.py
linkedin_ai_matcher/utils/: __init__.py  conversion.py  interaction.py  models.py  text_manipulation.py
