[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linkedin_ai_matcher"]

[project]
name = "linkedin_ai_matcher"
version = "0.1.0"
description = "Python package with GUI to match applicant profiles to LinkedIn job postings using AI."
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "anthropic",
    "selenium",
    "SQLAlchemy",
    "pymupdf4llm",
    "numpy",
    "requests",
    "html-to-markdown",
    "tqdm",
    "pydantic",
    "dotenv",
    "rich",
]

[tool.hatch.metadata]
allow-direct-references = true
